# agents-byzantine-tolerance

./: .gitignore  README.md  pyproject.toml
agents_byzantine_tolerance/: __init__.py  agent.py  consensus.py
analysis/: 04_plot.py  05_plot.py  07_plot.py
experiments/: 04_ambiguous_spec.py  05_consensus_gate.py  07_debate.py  actions.yaml  debate_prompts.yaml  scalar_consensus.py  specs.yaml
results/: README.md
results/01_verifiable_consensus/: smoke.jsonl
results/04_ambiguous_spec/: README.md  smoke.jsonl  smoke.summary.md
results/05_consensus_gate/: README.md  smoke.jsonl  smoke.summary.md
results/07_debate/: README.md  smoke.jsonl  smoke.summary.md
specs/: 07-adversarial-debate.md  08-debate-plugin.md  README.md
